src/expr/src/scalar/snapshots/mz_expr__scalar__func__sub_timestamp_interval.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    is_monotone = \"(true, true)\",\n    output_type = \"CheckedTimestamp<NaiveDateTime>\",\n    is_infix_op = true,\n    sqlname = \"-\"\n)]\nfn sub_timestamp_interval<'a>(\n    a: CheckedTimestamp<NaiveDateTime>,\n    b: Interval,\n) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {\n    sub_timestamplike_interval(a, b)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct SubTimestampInterval;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for SubTimestampInterval {
    type Input1 = CheckedTimestamp<NaiveDateTime>;
    type Input2 = Interval;
    type Output = Result<CheckedTimestamp<NaiveDateTime>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        sub_timestamp_interval(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <CheckedTimestamp<NaiveDateTime>>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        <CheckedTimestamp<NaiveDateTime> as ::mz_repr::DatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
}
impl std::fmt::Display for SubTimestampInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
impl SubTimestampInterval {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(sub_timestamp_interval),
            category: "Uncategorized",
            signature: "timestamp - interval -> timestamp",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn sub_timestamp_interval<'a>(
    a: CheckedTimestamp<NaiveDateTime>,
    b: Interval,
) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {
    sub_timestamplike_interval(a, b)
}
